2012-09-25 John Wu <John dot Wu at ACM dot org>
	* tests/scripts/fastbit-config.in:  change INCLUDES to AM_CPPFLAGS
	as recommended by automake 1.12.4

2012-09-24 John Wu <John dot Wu at ACM dot org>
	* configure.ac: modify the detection of FlexLexer.h to follow the
	path of flex command (to accomodate change in Mac OS X 10.8)

2012-09-20 John Wu <John dot Wu at ACM dot org>
	* src/array_t.h: reorganize the tests in array_t::push_back to
	avoid losing track of the old actual storage object (a problem
	reported by Petr Velan and Michael Beauregard)
	* configure.ac: change INCLUDES to AM_CPPFLAGS as recommended by
	automake 1.12.4

2012-09-19 John Wu <John dot Wu at ACM dot org>
	* src/parti.cpp: clean up the documentation about variations of
	the function reorder
	* examples/thula.cpp: add a special case for ordering the data
	table itself through the option -o (when -w and -t are not
	present) (to investigate a complaint from Petr Velan)

2012-09-18 John Wu <John dot Wu at ACM dot org>
	* src/fileManager.h: add function unrecordFile
	* src/idirekte.cpp: change direkte::write to use the more refined
	logic to handle file maps
	* examples/Makefile.am: add clean-local to remove .dSYM
	directories

2012-09-17 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp: update bin::write to match the other variants of
	the function write
	* examples/tcapi.c: move declarations to the beginning of code
	blocks to address the complaints from Visual Studio
	* win/*.vcproj, win/*.mak: update project files to invlude
	blob.cpp, bordm.cpp and iskive.cpp, change Debug build of the
	solution to use Debug option of each VC project
	* src/category.cpp: add call to prepareMembers inside
	category::getDictioanry (to address a problem reported by Andrew
	Olson)

2012-09-16 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: read dictionary again after recreating the
	columns from meta tags
	* src/i*.cpp: in the function write, all the indexes to be written